5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1594_2426.log
== TEST (2019-03-31 12:49:55) 
-- CODE:
tempo = float(input("tempo :"))
velocidade = float(input("tempo:"))
d = tempo*velocidade
quant de l = d / 12.0
print(d)
print(quanr de l)
-- ERROR:
File "XXXX", line 4
    quant de l = d / 12.0
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:50:18) 
-- CODE:
tempo = float(input("tempo :"))
velocidade = float(input("tempo:"))
d = tempo*velocidade
litro = ( d / 12.0 )
print(d)
print(quanr de l)
-- ERROR:
File "XXXX", line 6
    print(quanr de l)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:50:28) 
-- CODE:
tempo = float(input("tempo :"))
velocidade = float(input("tempo:"))
d = tempo*velocidade
litro = ( d / 12.0 )
print(d)
print(litro)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:50:42) 
-- CODE:
tempo = float(input("tempo :"))
velocidade = float(input("tempo:"))
d = tempo*velocidade
litro = ( d / 12.0 )
print(d)
print(litro)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:51:20) 
-- CODE:
tempo = float(input("tempo :"))
velocidade = float(input("tempo:"))
d = tempo*velocidade
litro = ( d / 12.0 )
print(d)
print(litro)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:54:20) 
-- CODE:
tempo = float(input("tempo :"))
velocidade = float(input("velocidade:"))
d = tempo*velocidade
litro = ( d / 12.0 * d )
print(d)
print(litro)
-- OUTPUT:
900.0
67500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:58:33) 
-- CODE:
tempo = float(input("tempo :"))
velocidade = float(input("velocidade:"))
d = tempo*velocidade 
litro = ( d / 12.0 * d )
print(d)
print(litro)
-- OUTPUT:
900.0
67500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:59:57) 
-- CODE:
tempo = float(input("tempo :"))
velocidade = float(input("velocidade:"))
d = tempo*velocidade 
litro = ( d / 12.0  )
print(d)
print(litro)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 13:00:13) 
-- CODE:
tempo = float(input("tempo :"))
velocidade = float(input("velocidade:"))
d = tempo*velocidade 
litro = ( d / 12.0  )
print(d)
print(litro)
-- EXECUTION TIME:
0.131098
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
